# name: TestQuery.test_event_property_filter
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestQuery.test_event_property_filter.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (has(['test_val3'], replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', '')))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestQuery.test_event_property_filter.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (replaceRegexpAll(JSONExtractRaw(properties, 'path'), '^"|"$', '') ILIKE '%/%')
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestQuery.test_event_property_filter_materialized
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestQuery.test_event_property_filter_materialized.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (has(['test_val3'], "mat_key"))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestQuery.test_event_property_filter_materialized.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND ("mat_path" ILIKE '%/%')
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestQuery.test_hogql_property_filter
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestQuery.test_hogql_property_filter.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals('a%sd', 'foo'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestQuery.test_hogql_property_filter.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals('a%sd', 'a%sd'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestQuery.test_hogql_property_filter.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals(replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''), 'test_val2'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestQuery.test_hogql_property_filter_materialized
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestQuery.test_hogql_property_filter_materialized.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals('a%sd', 'foo'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestQuery.test_hogql_property_filter_materialized.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals('a%sd', 'a%sd'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestQuery.test_hogql_property_filter_materialized.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals("mat_key", 'test_val2'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestQuery.test_person_property_filter
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (distinct_id IN
           (SELECT distinct_id
            FROM
              (SELECT distinct_id,
                      argMax(person_id, version) as person_id
               FROM person_distinct_id2
               WHERE team_id = 2
               GROUP BY distinct_id
               HAVING argMax(is_deleted, version) = 0)
            WHERE person_id IN
                (SELECT id
                 FROM
                   (SELECT id,
                           argMax(properties, person._timestamp) as properties,
                           max(is_deleted) as is_deleted
                    FROM person
                    WHERE team_id = 2
                    GROUP BY id
                    HAVING is_deleted = 0)
                 WHERE has(['tom@posthog.com'], replaceRegexpAll(JSONExtractRaw(properties, 'email'), '^"|"$', '')) ) ))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestQuery.test_select_hogql_expressions
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestQuery.test_select_hogql_expressions.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT tuple(uuid, event, properties, timestamp, team_id, distinct_id, elements_chain, created_at, person_id, person_created_at, person_properties),
         event
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
  ORDER BY tuple(uuid, event, properties, timestamp, team_id, distinct_id, elements_chain, created_at, person_id, person_created_at, person_properties) ASC
  LIMIT 101
  '
---
# name: TestQuery.test_select_hogql_expressions.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT count(*),
         event
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
  GROUP BY event
  ORDER BY count() DESC
  LIMIT 101
  '
---
# name: TestQuery.test_select_hogql_expressions.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT count(*),
         event
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND or(equals(event, 'sign up'), like(replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''), '%val2'))
  GROUP BY event
  ORDER BY count(*) DESC, event ASC
  LIMIT 101
  '
---
